# eftb

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  biome.json  eslint.config.js  extract-starmap.bat  fetch-blockchain.sh  fetch-data.py  index.html  package-lock.json  package.json  pyproject.toml  restool.py  tsconfig.app.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: build.yml  docker.yml
assets/: index.html
backend/: Cargo.toml  Makefile  calcs.rs  cli.rs  data.rs  lib.rs  raw.rs  units.rs  web.rs
backend/benches/: data.rs  path.rs
backend/calc/: exit.rs  fuel.rs  jump.rs  mod.rs  path.rs
backend/data_fixtures/: smartgates.json  starmap.json
backend/src/: cli.rs  data.rs  lib.rs  raw.rs  units.rs  web.rs
backend/src/calc/: exit.rs  mod.rs  path.rs
benches/: data.rs  path.rs
frontend/: Makefile  biome.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: api.tsx
frontend/src/components/: AutoCompleteInput.util.ts  ShipFuelSelect.tsx
frontend/src/consts/: bounds_data.ts  engines.ts  engines_data.ts  fuels.ts  fuels_data.ts  items.ts  items_data.ts  ships.ts  ships_data.ts  structures.ts  structures_data.ts  system_names.json
frontend/src/providers/: settings.tsx
frontend/src/routes/: __root.tsx
frontend/src/routes/calc/: basemats.tsx  fuel.tsx  fuelcost.tsx  jump.tsx
src/: api.tsx  calcs.rs  cli.rs  consts.tsx  data.rs  index.css  main.rs  main.tsx  raw.rs  routeTree.gen.ts  web.rs  web_error.rs
src/components/: AutoCompleteInput.css  AutoCompleteInput.tsx  AutoCompleteInput.util.ts  ShipFuelSelect.tsx  StarDataList.tsx  SystemInput.tsx  shipfuel.tsx
src/consts/: bounds.json  bounds.ts  engines.ts  engines_data.ts  fuels.ts  fuels_data.ts  items.ts  ships.ts  ships_data.ts  structures.ts  system_names.json  systemnames.json
src/providers/: DataProvider.tsx  settings.tsx
src/routes/: __root.tsx  about.lazy.tsx  index.tsx
src/routes/calc/: basemats.tsx  dist.tsx  exit.tsx  fuel.tsx  fuelcost.tsx  jump.tsx  path.tsx  settings.tsx
tools/: Makefile  api_get.py  apitool.py  bounds.py  extract-starmap.bat  fuels.py  gen_bounds.py  gen_engines.py  gen_fuels.py  gen_ships.py  gen_system_names.py  gen_systemnames.py  items.py  pyproject.toml  restool.py  schema.py  ships.py  smartgates.py  systemnames.py
tools/lib/: type_dogma.py
tools/src/: apitool.py  gen_bounds.py  gen_engines.py  gen_fuels.py  gen_items.py  gen_ships.py  gen_starmap.py  gen_structures.py  gen_system_names.py  items.py  restool.py  ships.py
tools/src/lib/: type_dogma.py
