[package]
name = "eve-frontiers-toolbox"
version = "0.1.0"
edition = "2021"
default-run = "cli"

[[bin]]
name = "cli"
path = "backend/cli.rs"

[[bin]]
name = "web"
path = "backend/web.rs"

[dependencies]
anyhow = "1.0.94"
bincode = "1.3.3"
clap = { version = "4.5.23", features = ["derive"] }
env_logger = "0.11.5"
indicatif = { version = "0.17.9", features = ["rayon"] }
log = "0.4.22"
pathfinding = "4.12.0"
rayon = "1.10.0"
rocket = { version = "0.5.1", features = ["serde_json", "json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
uom = { version = "0.36.0", features = ["serde"] }
