[package]
name = "eve-frontiers-toolbox"
version = "0.1.0"
edition = "2021"
default-run = "cli"

[lib]
name = "eftb"
path = "backend/lib.rs"

[[bin]]
name = "cli"
path = "backend/cli.rs"

[[bin]]
name = "web"
path = "backend/web.rs"

[[bench]]
name = "path"
harness = false

[[bench]]
name = "data"
harness = false

[dependencies]
anyhow = "1.0.94"
bincode = { version = "2", features = ["serde"] }
clap = { version = "4.5.23", features = ["derive"] }
env_logger = "0.11.5"
indexmap = "2.7.0"
indicatif = { version = "0.17.9", features = ["rayon"] }
log = "0.4.22"
num-traits = "0.2.19"
rayon = "1.10.0"
rocket = { version = "0.5.1", features = ["serde_json", "json"] }
rustc-hash = "2.1.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
uom = { version = "0.37.0", features = ["serde"] }

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }
