[project]
name = "eftb-tools"
version = "1.0.0"
description = "Various tools to process EVE Frontier data into EFTB formats"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "tqdm>=4.67.3",
]

[tool.uv]
package = true

[project.scripts]
apitool = "apitool:main"
restool = "restool:main"
gen_bounds = "gen_bounds:main"
gen_engines = "gen_engines:main"
gen_fuels = "gen_fuels:main"
gen_ships = "gen_ships:main"
gen_structures = "gen_structures:main"
gen_system_names = "gen_system_names:main"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=2.1.0",
    "types-tqdm>=4.67.3.20260518",
]

[tool.mypy]
mypy_path = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src"]
