[project]
name = "eftb-tools"
version = "1.0.0"
description = "Various tools to process EVE Frontier data into EFTB formats"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "tqdm>=4.67.3",
]

[tool.uv]
package = true

[project.scripts]
apitool = "apitool:main"
restool = "restool:ResTool"
gen_bounds = "gen_bounds:GenBounds"
gen_engines = "gen_engines:GenEngines"
gen_fuels = "gen_fuels:GenFuels"
gen_items = "gen_items:GenItems"
gen_ships = "gen_ships:GenShips"
gen_structures = "gen_structures:GenStructures"
gen_system_names = "gen_system_names:GenSystemNames"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=2.1.0",
    "types-tqdm>=4.67.3.20260518",
    "pytest>=9.0.3",
]

[tool.mypy]
mypy_path = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src"]
